Basic user interface for svc account.

--- a/AppSettings.json
+++ b/AppSettings.json
@@ -1,6 +1,6 @@
 {
     "ServiceAccount": {
-        "Username": "",
-        "Password": ""
+        "Username": "blah",
+        "Password": "blah"
     }
 }
