Most code in place for card reader.

--- a/App.config
+++ b/App.config
@@ -7,14 +7,14 @@
     </configSections>
     <userSettings>
         <MiFare2ActiveDirectory.Properties.Settings>
-            <setting name="SvcUsername" serializeAs="String">
-                <value />
-            </setting>
             <setting name="SvcPassword" serializeAs="String">
                 <value />
             </setting>
             <setting name="CardReaderId" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="SvcUsername" serializeAs="String">
+                <value>test</value>
             </setting>
         </MiFare2ActiveDirectory.Properties.Settings>
     </userSettings>
