--- a/MiFare2ActiveDirectory.csproj
+++ b/MiFare2ActiveDirectory.csproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PCSC" Version="7.0.0" />
+    <PackageReference Include="PCSC.Iso7816" Version="7.0.0" />
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="9.0.3" />
   </ItemGroup>
 
