--- a/MiFare2ActiveDirectory/MiFare2ActiveDirectory.csproj
+++ b/MiFare2ActiveDirectory/MiFare2ActiveDirectory.csproj
@@ -6,7 +6,20 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Title>MiFare To Active Directory</Title>
+    <Company>Archway Learning Trust</Company>
+    <Copyright>Archway Learning Trust</Copyright>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ArchwayTrust/ALT-MiFare2ActiveDirectory</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Education-SIMSAttendance\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
