--- a/MiFare2ActiveDirectory/MiFare2ActiveDirectory.csproj
+++ b/MiFare2ActiveDirectory/MiFare2ActiveDirectory.csproj
@@ -38,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="OUList.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
