General UI improvements.

--- a/MiFare2ActiveDirectory/App.config
+++ b/MiFare2ActiveDirectory/App.config
@@ -14,7 +14,10 @@
                 <value>0</value>
             </setting>
             <setting name="SvcUsername" serializeAs="String">
-                <value>test</value>
+                <value />
+            </setting>
+            <setting name="OUGroup" serializeAs="String">
+                <value />
             </setting>
         </MiFare2ActiveDirectory.Properties.Settings>
     </userSettings>
