--- a/MiFare2ActiveDirectory/MiFare2ActiveDirectory.csproj
+++ b/MiFare2ActiveDirectory/MiFare2ActiveDirectory.csproj
@@ -12,10 +12,12 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/ArchwayTrust/ALT-MiFare2ActiveDirectory</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <AssemblyVersion>0.1.4</AssemblyVersion>
+    <FileVersion>0.1.4</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\Education-SIMSAttendance\README.md">
+    <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
